made all changes

--- a/src/css/home.css
+++ b/src/css/home.css
@@ -4069,6 +4069,7 @@ input[type="number"]::-webkit-outer-spin-button {
   /* .navbar .nav-item:hover .nav-link{   } */
   .navbar .nav-item:hover .dropdown-menu {
     display: flex;
+    justify-content: space-evenly;
   }
   .navbar .nav-item .dropdown-menu {
     margin-top: 0;
